Compendium Browser CSS fix, table header alignment

--- a/src/styles/components/extras/_compendium-browser.scss
+++ b/src/styles/components/extras/_compendium-browser.scss
@@ -19,6 +19,7 @@
   margin-left: 320px;
   position: absolute;
   height: 100%;
+  text-align: left;
 
   img {
     min-width: 25px;
